--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,13 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
-
   <servlet>
-        <servlet-name>Log</servlet-name>
-        <servlet-class>dangnhap.testlogin</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>Log</servlet-name>
-        <url-pattern>/login.do</url-pattern>
-    </servlet-mapping>
-    
+    <servlet-name>Log</servlet-name>
+    <servlet-class>admin.testlogin</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>Log</servlet-name>
+    <url-pattern>/login.do</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>adduser</servlet-name>
+    <servlet-class>admin.insertuser</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>adduser</servlet-name>
+    <url-pattern>/adduser.do</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>xoauser</servlet-name>
+    <servlet-class>admin.removeuser</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>xoauser</servlet-name>
+    <url-pattern>/removeuser.do</url-pattern>
+  </servlet-mapping>
 </web-app>
