--- a/.classpath
+++ b/.classpath
@@ -16,5 +16,7 @@
 	<classpathentry kind="lib" path="E:/apache-tomcat-8.0.26/lib/jstl-1.2.jar"/>
 	<classpathentry kind="lib" path="E:/apache-tomcat-8.0.26/lib/mysql-connector-java-5.1.39-bin.jar"/>
 	<classpathentry kind="lib" path="E:/apache-tomcat-8.0.26/lib/servlet-api.jar"/>
+	<classpathentry kind="lib" path="E:/apache-tomcat-8.0.26/lib/commons-fileupload-1.3.jar"/>
+	<classpathentry kind="lib" path="E:/apache-tomcat-8.0.26/lib/commons-io-2.4.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
