--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,5 @@
 eclipse.preferences.version=1
 encoding//src/admin/insertuser.java=UTF-8
 encoding//src/admin/updateuser.java=UTF-8
+encoding//src/minhchung/createMC.java=UTF-8
+encoding//src/minhchung/loadfile.java=UTF-8
