--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -3,3 +3,4 @@ encoding//src/admin/insertuser.java=UTF-8
 encoding//src/admin/updateuser.java=UTF-8
 encoding//src/minhchung/createMC.java=UTF-8
 encoding//src/minhchung/loadfile.java=UTF-8
+encoding//src/minhchung/test.java=UTF-8
