test kiem tra mc

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -2,5 +2,6 @@ eclipse.preferences.version=1
 encoding//src/admin/insertuser.java=UTF-8
 encoding//src/admin/updateuser.java=UTF-8
 encoding//src/minhchung/createMC.java=UTF-8
+encoding//src/minhchung/kiemtramc.java=UTF-8
 encoding//src/minhchung/loadfile.java=UTF-8
 encoding//src/minhchung/loadmc.java=UTF-8
