quản lý cây minh chứng

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -6,3 +6,5 @@ encoding//src/minhchung/giaomc.java=UTF-8
 encoding//src/minhchung/kiemtramc.java=UTF-8
 encoding//src/minhchung/loadfile.java=UTF-8
 encoding//src/minhchung/loadmc.java=UTF-8
+encoding//src/minhchung/taocay.java=UTF-8
+encoding//src/minhchung/xoacay.java=UTF-8
